--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "raphael": "~2.1.4",
     "lodash": "~3.10.1",
-    "Keypress": "~2.1.3"
+    "Keypress": "~2.1.3",
+    "jquery": "~2.1.4",
+    "bootstrap": "~3.3.5"
   }
 }
