--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "lodash": "~3.10.1",
     "Keypress": "~2.1.3",
     "jquery": "~2.1.4",
-    "bootstrap": "~3.3.5"
+    "bootstrap": "~3.3.5",
+    "trianglify": "~0.3.1"
   }
 }
