--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "Keypress": "~2.1.3",
     "jquery": "~2.1.4",
     "bootstrap": "~3.3.5",
-    "trianglify": "~0.3.1"
+    "trianglify": "~0.3.1",
+    "commonmark": "~0.22.0"
   }
 }
